# indexa

./: .gitignore  CLAUDE.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/server/: .env.example  package.json  tsconfig.json  vitest.config.ts
apps/server/prisma/: schema.prisma  seed.ts
apps/server/prisma/migrations/20260331044949_init_domain_library_index_models/: migration.sql
apps/server/prisma/migrations/20260331082210_add_console_user_session/: migration.sql
apps/server/prisma/migrations/20260331151100_add_resumable_upload_sessions/: migration.sql
apps/server/src/: fastify.d.ts  start.ts  types.ts
apps/server/src/config/: app.ts
apps/server/src/services/: index.ts  prisma.ts  qdrant.ts
apps/server/src/tests/: app.test.ts  document-chunks.test.ts
apps/server/src/utils/: password.ts
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/src/: index.css
apps/web/src/app/: app.test.tsx  index.tsx  routes.tsx  session.tsx
apps/web/src/components/: app-shell.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: knowledge-bases.tsx  libraries.tsx  library-detail.tsx  login.tsx
apps/worker/: .env.example  README.md  package.json  pyproject.toml
apps/worker/src/indexa_worker/: __init__.py  __main__.py  chunking.py  config.py  constants.py  db.py  embeddings.py  ids.py  job_queue.py  parsers.py  pipeline.py  schema.py  storage.py  vectorstore.py  watcher.py
apps/worker/tests/: test_chunking.py  test_parsers.py  test_storage.py  test_watcher.py
(+36 files in other folders)
